--- a/to-do.html
+++ b/to-do.html
@@ -6,7 +6,7 @@
   <title>To-Do List</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body background="">
+<body>
   <div class="container">
     <h1>To-Do List</h1>
     <input type="text" id="taskInput" placeholder="Enter task">
