--- a/index.html
+++ b/index.html
@@ -1,19 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>To-Do List</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      max-width: 400px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
+    h1 {
+      text-align: center;
+    }
+    input[type="text"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+    }
+    button {
+      padding: 6px 12px;
+      margin-left: 5px;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    .add-btn {
+      background-color: #4CAF50;
+      color: white;
+    }
+    .add-btn:hover {
+      background-color: #45a049;
+    }
+    .edit-btn {
+      background-color: #2196F3;
+      color: white;
+    }
+    .edit-btn:hover {
+      background-color: #0b7dda;
+    }
+    .delete-btn {
+      background-color: #f44336;
+      color: white;
+    }
+    .delete-btn:hover {
+      background-color: #da190b;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .completed {
+      text-decoration: line-through;
+      color: gray;
+    }
+    .task-text {
+      flex-grow: 1;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>To-Do List</h1>
-    <input type="text" id="taskInput" placeholder="Enter task">
-    <button id="addTaskBtn">Add Task</button>
+    <input type="text" id="taskInput" placeholder="Enter task" />
+    <button class="add-btn" id="addTaskBtn">Add Task</button>
     <ul id="taskList"></ul>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const taskInput = document.getElementById("taskInput");
+    const addTaskBtn = document.getElementById("addTaskBtn");
+    const taskList = document.getElementById("taskList");
+
+    // Load tasks
+    function loadTasks() {
+      const tasks = JSON.parse(localStorage.getItem("tasks")) || [];
+      tasks.forEach(task => {
+        const li = createTaskElement(task.text, task.completed);
+        taskList.appendChild(li);
+      });
+    }
+
+    // Save tasks
+    function saveTasks() {
+      const tasks = [];
+      taskList.querySelectorAll("li").forEach(li => {
+        const text = li.querySelector(".task-text").textContent;
+        const completed = li.querySelector(".task-text").classList.contains("completed");
+        tasks.push({ text, completed });
+      });
+      localStorage.setItem("tasks", JSON.stringify(tasks));
+    }
+
+    // Create task element
+    function createTaskElement(text, completed = false) {
+      const li = document.createElement("li");
+
+      const span = document.createElement("span");
+      span.className = "task-text";
+      span.textContent = text;
+      if (completed) span.classList.add("completed");
+
+      // Complete toggle
+      span.addEventListener("click", function () {
+        span.classList.toggle("completed");
+        saveTasks();
+      });
+
+      // Edit button
+      const editBtn = document.createElement("button");
+      editBtn.textContent = "✏️ Edit";
+      editBtn.className = "edit-btn";
+      editBtn.addEventListener("click", function () {
+        const newText = prompt("Edit task:", span.textContent);
+        if (newText !== null && newText.trim() !== "") {
+          span.textContent = newText.trim();
+          saveTasks();
+        }
+      });
+
+      // Delete button
+      const deleteBtn = document.createElement("button");
+      deleteBtn.textContent = "🗑️ Delete";
+      deleteBtn.className = "delete-btn";
+      deleteBtn.addEventListener("click", function () {
+        li.remove();
+        saveTasks();
+      });
+
+      li.appendChild(span);
+      li.appendChild(editBtn);
+      li.appendChild(deleteBtn);
+
+      return li;
+    }
+
+    // Add task
+    addTaskBtn.addEventListener("click", function () {
+      const taskText = taskInput.value.trim();
+      if (taskText !== "") {
+        const li = createTaskElement(taskText);
+        taskList.appendChild(li);
+        taskInput.value = "";
+        saveTasks();
+      } else {
+        alert("Please enter a task!");
+      }
+    });
+
+    // Initialize
+    document.addEventListener("DOMContentLoaded", loadTasks);
+  </script>
 </body>
 </html>
